--- a/public/resources/index.html
+++ b/public/resources/index.html
@@ -3,7 +3,7 @@
 <!-- Last Published: September 21, 2024 --><html lang="en-us" dir="ltr"
       data-wc-theme-default="system">
   
-<head>
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=4321&amp;path=livereload" data-no-instant defer></script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -44,7 +44,7 @@
   <meta name="description" content="Below is a curated list of resources we&rsquo;ve found to be particularly useful and accessible. If you come across other great resources that you think you should be on this list, please let us know!" />
 
   
-  <link rel="alternate" hreflang="en-us" href="https://example.com/resources/" />
+  <link rel="alternate" hreflang="en-us" href="http://localhost:4321/resources/" />
 
   
   
@@ -161,7 +161,7 @@
   <link rel="icon" type="image/png" href="/media/icon_hu7269165870461958625.png" />
   <link rel="apple-touch-icon" type="image/png" href="/media/icon_hu10653575574006896197.png" />
 
-  <link rel="canonical" href="https://example.com/resources/" />
+  <link rel="canonical" href="http://localhost:4321/resources/" />
 
   
   
@@ -187,10 +187,10 @@
     <meta property="twitter:creator" content="@GetResearchDev" />
   
   <meta property="og:site_name" content="UO R Bootcamp 2024" />
-  <meta property="og:url" content="https://example.com/resources/" />
+  <meta property="og:url" content="http://localhost:4321/resources/" />
   <meta property="og:title" content="Resources | UO R Bootcamp 2024" />
-  <meta property="og:description" content="Below is a curated list of resources we&rsquo;ve found to be particularly useful and accessible. If you come across other great resources that you think you should be on this list, please let us know!" /><meta property="og:image" content="https://example.com/media/icon_hu16222407252349562370.png" />
-    <meta property="twitter:image" content="https://example.com/media/icon_hu16222407252349562370.png" /><meta property="og:locale" content="en-us" />
+  <meta property="og:description" content="Below is a curated list of resources we&rsquo;ve found to be particularly useful and accessible. If you come across other great resources that you think you should be on this list, please let us know!" /><meta property="og:image" content="http://localhost:4321/media/icon_hu16222407252349562370.png" />
+    <meta property="twitter:image" content="http://localhost:4321/media/icon_hu16222407252349562370.png" /><meta property="og:locale" content="en-us" />
   
     
       <meta
@@ -342,8 +342,8 @@
   
   <script
     defer
-    src="/js/hugo-blox-en.min.e5fa931947cac2d947732ea37a770aae2b5bd4a50b6048060cd129b46159a06d.js"
-    integrity="sha256-5fqTGUfKwtlHcy6jencKritb1KULYEgGDNEptGFZoG0="
+    src="/js/hugo-blox-en.min.js"
+    integrity=""
   ></script>
 
   
