--- a/public/slides/00-slides.html
+++ b/public/slides/00-slides.html
@@ -50,38 +50,38 @@ class: split-four
 
 .column[.content[.center[&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;
 
-&lt;img src="images/dimakis.png" width="100%" /&gt;
+&lt;img src="images/ian.png" width="100%" /&gt;
 
-### &lt;u&gt;Sarah&lt;/u&gt;
-
-]]]
-
-.column[.content[.center[&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;
-
-&lt;img src="images/shryock.png" width="100%" /&gt;
 ### &lt;u&gt;Ian&lt;/u&gt;
 
-
 ]]]
-
 
 .column[.content[.center[&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;
 
-&lt;img src="images/rait.png" width="100%" /&gt;
-
-
-### &lt;u&gt;Lindsay&lt;/u&gt;
-
-]]]
-
-
-
-.column[.content[.center[&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;
-
-&lt;img src="images/gratz.png" width="100%" /&gt;
-
-
+&lt;img src="images/dom.png" width="100%" /&gt;
 ### &lt;u&gt;Dominik&lt;/u&gt;
+
+
+]]]
+
+
+.column[.content[.center[&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;
+
+&lt;img src="images/den.png" width="100%" /&gt;
+
+
+### &lt;u&gt;Denicia&lt;/u&gt;
+
+]]]
+
+
+
+.column[.content[.center[&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;
+
+&lt;img src="images/ben.png" width="100%" /&gt;
+
+
+### &lt;u&gt;Ben&lt;/u&gt;
 
 
 ]]]
@@ -310,7 +310,7 @@ class: yourturn, center, middle
 # Q &amp; A
 
 
-<div class="countdown" id="timer_af2086eb" data-update-every="1" tabindex="0" style="right:0;bottom:0;">
+<div class="countdown" id="timer_106bae02" data-update-every="1" tabindex="0" style="right:0;bottom:0;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
